All recent feedback except coproduct

--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -410,7 +410,7 @@ The following construction of Bar-Natan is the focus of his seminal article \cit
 \begin{proof}[\cite{on-the-vassiliev-knot-invariants}]
 	First we prove that the map \(W_{\mathfrak{g}}: \mathcal{D} \to \mathcal{U}(\mathfrak{g})\) descends to a map from \(\mathcal{A}\).
 
-	The map \(T_{\mathfrak{g}}: \mathcal{D} \to \mathfrak{g}^{\otimes u}\) is invariant under \ref{eq:IHX} and \ref{eq:AS}: for \ref{eq:AS}, it follows from the antisymmetry of \([\cdot, \cdot]\), and for \ref{eq:IHX} it follows from the Jacobi relation.
+	The map \(T_{\mathfrak{g}}: \mathcal{D} \to \mathfrak{g}^{\otimes u}\) is invariant under \ref{eq:IHX} and \ref{eq:AS}. For \ref{eq:AS}, it follows from the antisymmetry of \([\cdot, \cdot]\), and for \ref{eq:IHX} it follows from the Jacobi relation.
 
 	Furthermore, the map \(\mathfrak{g}^{\otimes u} \to \mathcal{U}(\mathfrak{g})\) is invariant under \ref{eq:STU}. For if two chord diagrams differ by \ref{eq:STU}, on some univalent vertices associated with adjacent tensor factors \(y\) and \(x\), the two sides of an \ref{eq:STU} map to
 	\[\cdots \otimes [x, y]_{\mathfrak{g}} \otimes \cdots \qquad \text{and} \qquad (\cdots \otimes x \otimes y \otimes \cdots) - (\cdots \otimes y \otimes x \otimes \cdots),\]
