--- a/welded_knots_Ig_and_arrow_diagrams.tex
+++ b/welded_knots_Ig_and_arrow_diagrams.tex
@@ -84,19 +84,19 @@ In fact, we can even avoid the trouble of the global orientation reversal move b
 	A (classical) \textbf{long knot} an embedding of the line \(k: \mathbb{R} \hookrightarrow \mathbb{R}^{3}\), with the condition that \(k(t) = (t, 0, 0)\) for all large \(|t|\).
 \end{definition}
 
-There was no need to define long knots earlier because in the classical case, long knots and knots are in bijection with each other and the theory is the same for both long and regular knots. In the welded case however the long theory has the advantage of eliminating the global orientation reversal move.
+For the finite type theory, the algebra \(\mathcal{A}\) of Jacobi diagrams (and chord diagrams), is replaced with an algebra defined similarly, but with the the circular skeleton replaced by a line. The relations are the same (either \ref{eq:STU} or \ref{eq:4T}), but instead of the univalent vertices having a cyclic order they have a linear order. The notation \(\mathcal{A}(|)\) is used for this algebra, in which the skeleton is drawn as an argument.
+
+There was no need to define long knots earlier because in the classical case, long knots and knots are in bijection with each other and the theory (including the finite type theory) is the same for both long and regular knots. Recall Proposition \ref{prop:linear-jacobi-diagrams-cyclically-invariant} as evidence of this fact. In the welded case however the long theory has the advantage of eliminating the global orientation reversal move.
 
 \begin{definition}
 	A \textbf{welded long knot} is a welded knot, but instead of a planar curve it is a planar immersion \(\ell: \mathbb{R} \to \mathbb{R}^{2}\) such that \(\ell(t) = (t, 0)\) for all large \(|t|\).
 \end{definition}
 
-For why this stops the global orientation reversal we refer the reader again to \cite{virtual-knot-presentation-of-ribbon-torus-knots} and also \cite[Corrigendum]{finite-type-invariants-of-w-knotted-objects-II-tangles-foams-and-the-kashiwara-vergne-problem}.
-
-For the finite type theory, the algebra \(\mathcal{A}\) of Jacobi diagrams (and chord diagrams), is replaced with \(\mathcal{A}(|)\). The relations are the exact same (either \ref{eq:IHX} or \ref{eq:4T}), but instead of the univalent vertices having a cyclic order (and and the skeleton being a circle) they have a linear order (and the skeleton is a line).
+For why this eliminates the global orientation reversal we refer the reader again to \cite{virtual-knot-presentation-of-ribbon-torus-knots} and also \cite[Corrigendum]{finite-type-invariants-of-w-knotted-objects-II-tangles-foams-and-the-kashiwara-vergne-problem}.
 
 \section{Arrow diagrams}
 
-The finite type theory of welded long knots is similar to that of classical long knots.
+The finite type theory of welded long knots is defined similarly to that of classical long knots.
 
 \begin{definition}
 	A \textbf{singular welded long knot} is a welded long knot whose crossings can also be of the following types
@@ -241,7 +241,18 @@ Unlike the involved construction for the Kontsevich integral \(Z\), the construc
 \section{Welded weight systems and Lie algebras}
 \label{sec:welded-weight-systems-and-lie-algebras}
 
-There is a variant of Construction \ref{cons:lie-algebra-weight-system} for welded knots taking a Lie algebra and constructing a weight system. The difference is that vertices in string diagrams now have incoming edges (``heads'') and outgoing edges (``tails''), and diagramatically, only edges of the opposite orientation can be contracted. This was not true in the classical case, and the need to fix this is what made us restrict to metric Lie algebras. Hence, in the welded case we can consider any finite-dimensional Lie algebra.
+There is a variant of Construction \ref{cons:lie-algebra-weight-system} for welded knots, taking a Lie algebra and constructing a weight system. The difference is that vertices in string diagrams now have incoming edges (``heads'') and outgoing edges (``tails''), and diagramatically, edges can only be contracted in a way that agrees with the half-edges' orientations. Recall that this restriction was not imposed in the classical case, and accomodating this was the reason to restrict to metric Lie algebras. Hence, in the welded case we can consider any Lie algebra, without the metric restriction.
+
+\begin{construction}
+	\label{cons:lie-algebra-weight-system-welded}
+	Given a Lie algebra \(\mathfrak{g}\), we obtain a map \(W_{\mathfrak{g}}: \mathcal{A}_{w} \to \mathcal{U}(I\mathfrak{g})\).
+
+	Apply Construction \ref{cons:lie-algebra-weight-system}, but when associating to each trivalent vertex a copy of the tensor \([\cdot, \cdot] \in \mathfrak{g}^{\ast} \otimes \mathfrak{g}^{\ast} \otimes \mathfrak{g}\), also ensure that the inward oriented half-edges are associated to \(g^{\ast}\) components, and the outward oriented half-edges to the \(\mathfrak{g}\) component. In addition to the preservation of cyclic orders (recall Warning \ref{warn:cyclic-order-of-bracket}), this determines a bijection between the half-edges of each trivalent vertex and the components of the associated tensor.
+
+	For each edge between trivalent vertices, contract the corresponding tensors along the components corresponding to those half-edges. The signature of the components will always allow for the contraction from the fact that connected half-edges are always oriented coherently.
+
+	The result is a tensor product in copies of \(\mathfrak{g}\) and \(\mathfrak{g}^{\ast}\), which can be interpreted as an element of \((I\mathfrak{g})^{\otimes u}\) where \(u\) is the number of univalent vertices of the diagram in \(\mathcal{A}_{w}\).
+\end{construction}
 
 Note an imporant difference to the classical case. There are now two types of univalent vertices that connect to the external line: heads and tails. Heads correspond to elements of \(\mathfrak{g}\) and tails to elements of \(\mathfrak{g}^{\ast}\). Therefore, the role of \(\mathcal{U}(\mathfrak{g})\) in the classical case must be played here by some other associative algebra whose basis elements are words in \(\mathfrak{g} \sqcup \mathfrak{g}^{\ast}\).
 
@@ -267,7 +278,7 @@ Interpreting tails and heads in these \ref{eq:STU} relations as elements of \(\m
 \]
 So, \([0 \oplus x, 0 \oplus y] = 0 \oplus [x, y]_{\mathfrak{g}}\).
 
-To determine the bracket on \(\mathfrak{g}^{\ast} \oplus 0\), we need to examine one of the trivial cases not shown above. Indeed, the two-in-one-out rule neccecitates that the bracket on \(\mathfrak{g}^{\ast} \oplus 0\) be the zero-bracket. (Recall this rule was a consequence of the \ref{eq:TC} relation, and that \ref{eq:TC} stands for tails commute.)
+To determine the bracket on \(\mathfrak{g}^{\ast} \oplus 0\), we need to examine one of the trivial cases not shown above. Indeed, the tails commute relation neccecitates that the bracket on \(\mathfrak{g}^{\ast} \oplus 0\) be the zero-bracket.
 \[
 	\def\svgscale{0.3} \raisebox{-20pt}{\input{graphics/stu_welded_labelled_tail_tail_s.pdf_tex}}
 	\quad
@@ -313,8 +324,8 @@ Similarly, the \ref{eq:AS} relation gives \([\phi \oplus 0, 0 \oplus y] = -\oper
 	This construction coincides with the Drinfeld double \cite{quantum-groups} of the Lie bialgebra \(\mathfrak{g}\), in the case where \(\mathfrak{g}\) is co-commutative.
 \end{remark}
 
-\begin{proposition}
-	There is a well-defined algebra homomorphism \(\mathcal{A}_{w} \to \mathcal{U}(I\mathfrak{g})\) given by a variant of Construction \ref{cons:lie-algebra-weight-system}.
+\begin{proposition}[\cite{finite-type-invariants-of-w-knotted-objects-I-w-knots-and-the-alexander-polynomial}]
+	Construction \ref{cons:lie-algebra-weight-system-welded} gives a well-defined algebra homomorphism \(\mathcal{A}_{w} \to \mathcal{U}(I\mathfrak{g})\).
 \end{proposition}
 
 \begin{proof}
@@ -724,7 +735,7 @@ With the appropriate definitions in place, the proof follows the proof of Theore
 		& = \bigoplus_{n \in \mathbb{N}} \mathcal{O}_{\text{Lie}}(n + 1) \otimes_{S_{n}} \Gamma(\mathbf{nI}) \\
 		& = \bigoplus_{n \in \mathbb{N}} \mathcal{O}_{\text{Lie}}(n + 1) \otimes_{S_{n}} \mathbf{T}_{\varepsilon}(\mathbf{0}, \mathbf{nI}).
 	\end{align*}
-	By Lemma \ref{lem:lie-operad-left-skewed-tree-normal-form}, the \(kS_{n}\)-action on \(\mathcal{O}_{\text{Lie}}\), any element \(t \in T(\mathcal{O}_{\text{Lie}}, \mathbf{I})\) may be uniquely written as
+	By Lemma \ref{lem:lie-operad-left-skewed-tree-normal-form}, from the \(S_{n}\)-action on \(\mathcal{O}_{\text{Lie}}\), any element \(t \in T(\mathcal{O}_{\text{Lie}}, \mathbf{I})\) may be uniquely written as
 	\[
 		t
 		=
@@ -754,9 +765,9 @@ With the appropriate definitions in place, the proof follows the proof of Theore
 		\arrow[hook', from=1-3, to=3-3]
 		\arrow[hook, from=3-1, to=3-3]
 	\end{tikzcd}\]
-	Note that in the case \(n = 1, m_{1} = 2\) on the object \(y \otimes y \otimes X\) for arbitrary \(X \in \mathbf{T}_{\varepsilon}(\mathbf{0}, \mathbf{2I})\), this enforces the regular \ref{eq:STU} of Example \ref{ex:stu-in-external-enveloping-algebra} as well as two variants, (corresponding to the three variants of \ref{eq:STU} in \(\mathcal{A}_{w}\)) and also the \ref{eq:TC} relation. The map \(f\) therefore factors through the quotient to \(U(\mathcal{O}, \mathbf{I})\).
+	Just like in the classical case of Example \ref{ex:stu-in-external-enveloping-algebra}, the relations in the algebra \(\mathcal{A}_{w}\) can be recovered from this diagram. Indeed, in the special case \(n = 1, m_{1} = 2\), the diagram is an equality in \(\mathcal{O}_{\text{Lie}}(2) \otimes \mathcal{O}_{\text{Lie}}(2) \otimes \mathbf{T}_{\varepsilon}(\mathbf{0}, \mathbf{2I})\). Specifying the morphism \(y \otimes y \otimes X\) and leaving as arbitrary \(X \in \mathbf{T}_{\varepsilon}(\mathbf{0}, \mathbf{2I})\), this reduces to the directed \ref{eq:STU} and \ref{eq:TC} relations. The map \(f\) therefore factors through the quotient to \(U(\mathcal{O}_{\text{Lie}}, \mathbf{I})\).
 
-	The map \(f\) is clearly surjective --- every arrow diagram has an underlying chord diagram, which can be presented by a graph whose edges do not have local minima. The arrow diagram can therefore be presented with only directed Casimirs (caps), and trivalent two-in-one-out vertices. A morphism in \(\mathbf{T}_{\varepsilon}(\mathbf{0}, \mathbf{n})\) is built by presenting the two-in-one-out vertices by morphisms
+	The map \(f\) is clearly surjective as every arrow diagram which can be presented by a graph whose edges do not have local minima. The arrow diagram can therefore be presented with only coevaluation maps (caps), and trivalent two-in-one-out vertices. A morphism in \(\mathbf{T}_{\varepsilon}(\mathbf{0}, \mathbf{nI})\) is built by presenting the two-in-one-out vertices by morphisms
 	\[
 		{\scriptsize
 		\def\svgscale{0.38}
@@ -777,7 +788,7 @@ With the appropriate definitions in place, the proof follows the proof of Theore
 		\adjustbox{valign=c}{\input{graphics/two_coloured_coadjoint_action_right.pdf_tex}}
 		}
 	\]
-	and cups by the morphism \(c: \mathbf{0} \to \mathbf{I} \otimes \mathbf{I}\).
+	and caps by the coevaluation morphism \(\varepsilon\).
 
 	The map is injective because we have shown that \(U(\mathcal{O}_{\text{Lie}}, \mathbf{I})\) has the directed \ref{eq:STU} relations and the \ref{eq:TC} relation. Just like in the classical case, the \ref{eq:AS} and \ref{eq:IHX} relations follow from \ref{eq:STU}, so any equalities in \(\mathcal{A}\) are also observed in \(U(\mathcal{O}_{\text{Lie}}, \mathbf{I})\).
 \end{proof}
